[package]
name = "imageutil"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"]}


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
strip = "symbols"