[package]
name = "imageutil"
version = "0.0.4"
edition = "2021"
description = "Image utilities"
license = "MIT"
authors = ["Googlefan <googlefan@neody.dev>"]
repository = "https://github.com/neodyland/imageutil"
categories = ["multimedia::images"]
keywords = ["image"]

[dependencies]
image = { version = "0.24.7", default-features = false, features = [] }
rusttype = { version = "0.9.3", optional = true }

[dev-dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"] }
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
strip = "symbols"

[features]
default = ["gradient", "text", "util"]
gradient = ["util"]
text = ["dep:rusttype", "util"]
util = []
